# rust-macro

./: .gitignore  Cargo.toml  LICENSES.md  README.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml  README.md  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/installers/interception/: SOURCE-INFO.txt
crates/app/src/: commands.rs  driver_install.rs  dto.rs  lib.rs  listener.rs  main.rs  recording.rs  settings.rs  state.rs
crates/app/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/app/ui/src/: App.svelte  app.css
crates/app/ui/src/lib/: api.ts  types.ts
crates/app/ui/src/lib/components/: DriverStatusBanner.svelte  EditMetadataModal.svelte  HotkeyPicker.svelte  MacroRow.svelte  MacroTable.svelte  PlaybackBanner.svelte  RebootPromptModal.svelte  RecordingModal.svelte  SettingsView.svelte  StepEditor.svelte  StepRow.svelte  Toast.svelte  ToastHost.svelte
crates/app/ui/src/lib/stores/: driver.ts  macros.ts  playback.ts  recording.ts  settings.ts  toast.ts
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  lib.rs  main.rs  stdio_driver.rs
crates/cli/tests/: e2e.rs
crates/driver/: Cargo.toml
crates/driver-interception/: Cargo.toml
crates/driver-interception/src/: driver.rs  lib.rs  mouse.rs  scancode.rs  status.rs
crates/driver-interception/tests/: smoke.rs
crates/driver/src/: hub.rs  lib.rs  mock.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/hotkey/: Cargo.toml
crates/hotkey/src/: lib.rs
crates/macro_model/: Cargo.toml
crates/macro_model/src/: input.rs  lib.rs  macro_def.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs
crates/rawinput-probe/: Cargo.toml
crates/rawinput-probe/src/: main.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: compile.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/superpowers/plans/: 2026-05-26-rust-macro-plan-1-backend.md  2026-05-26-rust-macro-plan-2-real-driver.md  2026-05-26-rust-macro-plan-2a-driverhub.md  2026-05-26-rust-macro-plan-2b-real-driver.md  2026-05-26-rust-macro-plan-3-tauri-gui.md  2026-05-26-rust-macro-plan-3a-tauri-gui.md  2026-05-27-rust-macro-plan-3b-recording-editor.md  2026-05-27-rust-macro-plan-3c-hotkey-mouse-settings.md  2026-05-27-rust-macro-plan-3d-driver-bundling.md  2026-05-28-mouse-stream-playback.md
docs/superpowers/specs/: 2026-05-26-rust-macro-design.md  2026-05-26-rust-macro-plan-2a-driverhub-design.md  2026-05-26-rust-macro-plan-2b-real-driver-design.md  2026-05-26-rust-macro-plan-3a-tauri-gui-design.md  2026-05-27-rust-macro-plan-3b-recording-editor-design.md  2026-05-28-mouse-stream-playback-design.md
