[workspace]
resolver = "2"
members = [
    "crates/error",
    "crates/macro_model",
    "crates/driver",
    "crates/storage",
    "crates/recorder",
    "crates/player",
    "crates/hotkey",
    "crates/cli",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

# dev
tempfile = "3"
