[package]
name = "rm-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "macro-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
dirs = "5"
rm-driver = { path = "../driver" }
rm-error = { path = "../error" }
rm-hotkey = { path = "../hotkey" }
rm-macro-model = { path = "../macro_model" }
rm-player = { path = "../player" }
rm-recorder = { path = "../recorder" }
rm-storage = { path = "../storage" }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
