[package]
name = "rm-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "macro-cli"
path = "src/main.rs"

[features]
default = []
# Opt-in: pulls in rm-driver-interception and enables the --driver / `driver`
# CLI surface. Requires interception.dll on PATH at runtime.
interception = ["dep:rm-driver-interception"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
dirs = "5"
rm-driver = { path = "../driver" }
rm-driver-interception = { path = "../driver-interception", optional = true }
rm-error = { path = "../error" }
rm-hotkey = { path = "../hotkey" }
rm-macro-model = { path = "../macro_model" }
rm-player = { path = "../player" }
rm-recorder = { path = "../recorder" }
rm-storage = { path = "../storage" }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
