[package]
name = "rm-driver"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
rm-macro-model = { path = "../macro_model" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
